[package]
name = "newrelic"
description = """
Idiomatic Rust bindings to the New Relic C SDK.

Note: versions 0.1.0 onwards of this crate are completely incompatible
with previous versions as they move away from the deprecated New Relic SDK
to the newer New Relic C SDK. This has additional requirements: see
https://docs.newrelic.com/docs/agents/c-sdk/get-started/introduction-c-sdk
for details.
"""
version = "0.2.2"
authors = ["Ben Sully <ben@bsull.io>"]
categories = ["api-bindings"]
edition = "2021"
repository = "https://github.com/sd2k/newrelic"
license = "MIT/Apache-2.0"

[lib]
doctest = false

[dependencies]
log = "0.4.22"
newrelic-sys = "0.2.0"
libc = { version = "0.2.158", optional = true }
pin-project = { version = "1.1.5", optional = true }

[dev-dependencies]
tokio = { version = "1.40.0", features = ["full"] }

[features]
default = []
distributed_tracing = ["libc"]
async = ["pin-project"]

[badges]
maintenance = { status = "passively-maintained" }
